[package]
name = "mqtt_ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
error-stack = "0.4.1" 
tokio = { version="1.34.0", features = ["full", "tracing"]}
tokio-util = "0.7.10"
tokio-stream = "0.1"
async-channel = "2.1.1"
serde_json = "1.0"
serde = { version = "1.0.134", features = ["derive"] }
rumqttc = { version = "0.23.0", default-features = false }
rustop = "1.1.1"
tracing = { version = "0.1.27"  }
log = "0.4.14"
tracing-init = { git="http://github.com/yuvalrakavy/tracing-init.git" }
built = "0.7.1" 

[build-dependencies]
built = { version= "0.7.1", features = ["chrono"] }

# to run with logging use
#  RUST_LOG=trace,rumqttc=off mqtt_ac ...
