[package]
name = "mqtt_ac"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
error-stack = "0.5.0" 
tokio = { version="1.44.2", features = ["full", "tracing"]}
tokio-util = "0.7.15"
tokio-stream = "0.1.17"
async-channel = "2.3.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rumqttc = { version = "0.24.0", default-features = false }
rustop = "1.1.4"
tracing = { version = "0.1.41"  }
log = "0.4.27"
tracing-init = { git="http://github.com/yuvalrakavy/tracing-init.git" }
built = "0.7.7" 

[build-dependencies]
built = { version= "0.7.1", features = ["chrono"] }

# to run with logging use
#  RUST_LOG=trace,rumqttc=off mqtt_ac ...
